test/org/midica/testfiles/failing/function-with-second-param.midica
INCLUDE inc/instruments.midica

FUNCTION test1 test2
	0 c /4
	0 c /4
END
